--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1,minimum-scale=1,maximum-scale=1,
+    user-scalable=no,viewport-fit=cover"> 
+    <!-- 记得加meta:vp -->
     <title>画板</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="canvas" width="100" height="100"></canvas>
     <script>
+        // document.addEventListener('touchmove', e => {e.preventDefalut();}, {passive: false})
+        
         let canvas = document.getElementById("canvas");
         canvas.width = document.documentElement.clientWidth
         canvas.height = document.documentElement.clientHeight
