--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <canvas id="canvas" width="100" height="100"></canvas>
     <script>
-        // document.addEventListener('touchmove', e => {e.preventDefalut();}, {passive: false})
         
         let canvas = document.getElementById("canvas");
         canvas.width = document.documentElement.clientWidth
@@ -32,7 +31,7 @@
         ctx.fillStyle = "black";
         ctx.strokeStyle = "black";
         ctx.lineWidth = 4;
-        ctx.lineCap = "round"
+        ctx.lineCap = "round";
         
         var isTouchDevice = 'ontouchstart' in document.documentElement;
         if(isTouchDevice) {
